libxc-ffi/src/ffi_xc_static.rs

//! FFI bindings for libxc (xc.h).
//!
//! # API Version Features
//!
//! This crate provides versioned FFI bindings through cargo features:
//!
//! - `api-v6_2`: Base API (libxc 6.2.2)
//! - `api-v7_0`: Extends api-v6_2, adds ext_params, mgga_new, fhc_enforcement
//!   (libxc 7.0.0)
//! - `api-v7_1`: Extends api-v7_0, adds default flags, func_init_flags (libxc
//!   7.1.0)
//!
//! Features are cumulative: enabling `api-v7_1` also enables all functions from
//! earlier versions (api-v6_2, api-v7_0).
//!
//! Note: Constants from `xc_version.h` (XC_VERSION, XC_MAJOR_VERSION, etc.)
//! are excluded from these bindings since they are version-specific.

#![allow(non_camel_case_types)]
#![allow(clippy::missing_safety_doc)]
#![allow(clippy::type_complexity)]
#![allow(clippy::too_many_arguments)]

use core::ffi::{c_char, c_int, c_longlong, c_void};

/* automatically generated by rust-bindgen 0.72.1 */

pub const XC_UNPOLARIZED: u32 = 1;
pub const XC_POLARIZED: u32 = 2;
pub const XC_NON_RELATIVISTIC: u32 = 0;
pub const XC_RELATIVISTIC: u32 = 1;
pub const XC_EXCHANGE: u32 = 0;
pub const XC_CORRELATION: u32 = 1;
pub const XC_EXCHANGE_CORRELATION: u32 = 2;
pub const XC_KINETIC: u32 = 3;
pub const XC_FAMILY_UNKNOWN: i32 = -1;
pub const XC_FAMILY_LDA: u32 = 1;
pub const XC_FAMILY_GGA: u32 = 2;
pub const XC_FAMILY_MGGA: u32 = 4;
pub const XC_FAMILY_LCA: u32 = 8;
pub const XC_FAMILY_OEP: u32 = 16;
pub const XC_FAMILY_HYB_GGA: u32 = 32;
pub const XC_FAMILY_HYB_MGGA: u32 = 64;
pub const XC_FAMILY_HYB_LDA: u32 = 128;
pub const XC_FLAGS_HAVE_EXC: u32 = 1;
pub const XC_FLAGS_HAVE_VXC: u32 = 2;
pub const XC_FLAGS_HAVE_FXC: u32 = 4;
pub const XC_FLAGS_HAVE_KXC: u32 = 8;
pub const XC_FLAGS_HAVE_LXC: u32 = 16;
pub const XC_FLAGS_1D: u32 = 32;
pub const XC_FLAGS_2D: u32 = 64;
pub const XC_FLAGS_3D: u32 = 128;
pub const XC_FLAGS_HYB_CAM: u32 = 256;
pub const XC_FLAGS_HYB_CAMY: u32 = 512;
pub const XC_FLAGS_VV10: u32 = 1024;
pub const XC_FLAGS_HYB_LC: u32 = 2048;
pub const XC_FLAGS_HYB_LCY: u32 = 4096;
pub const XC_FLAGS_STABLE: u32 = 8192;
pub const XC_FLAGS_DEVELOPMENT: u32 = 16384;
pub const XC_FLAGS_NEEDS_LAPLACIAN: u32 = 32768;
pub const XC_FLAGS_NEEDS_TAU: u32 = 65536;
pub const XC_FLAGS_ENFORCE_FHC: u32 = 131072;
pub const XC_FLAGS_ON_DEVICE: u32 = 262144;
pub const XC_FLAGS_ON_HOST: u32 = 524288;
pub const XC_FLAGS_HAVE_ALL: u32 = 31;
pub const XC_EXT_PARAMS_DEFAULT: i32 = -999998888;
pub const XC_MAX_REFERENCES: u32 = 5;
pub type wchar_t = c_int;
#[repr(C)]
#[repr(align(16))]
#[derive(Debug, Copy, Clone)]
pub struct max_align_t {
    pub __clang_max_align_nonce1: c_longlong,
    pub __bindgen_padding_0: u64,
    pub __clang_max_align_nonce2: u128,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct func_reference_type {
    pub ref_: *const c_char,
    pub doi: *const c_char,
    pub bibtex: *const c_char,
    pub key: *const c_char,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct func_params_type {
    pub n: c_int,
    pub names: *mut *const c_char,
    pub descriptions: *mut *const c_char,
    pub values: *const f64,
    pub set:
        ::core::option::Option<unsafe extern "C" fn(p: *mut xc_func_type, ext_params: *const f64)>,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct xc_lda_out_params {
    pub zk: *mut f64,
    pub vrho: *mut f64,
    pub v2rho2: *mut f64,
    pub v3rho3: *mut f64,
    pub v4rho4: *mut f64,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct xc_gga_out_params {
    pub zk: *mut f64,
    pub vrho: *mut f64,
    pub vsigma: *mut f64,
    pub v2rho2: *mut f64,
    pub v2rhosigma: *mut f64,
    pub v2sigma2: *mut f64,
    pub v3rho3: *mut f64,
    pub v3rho2sigma: *mut f64,
    pub v3rhosigma2: *mut f64,
    pub v3sigma3: *mut f64,
    pub v4rho4: *mut f64,
    pub v4rho3sigma: *mut f64,
    pub v4rho2sigma2: *mut f64,
    pub v4rhosigma3: *mut f64,
    pub v4sigma4: *mut f64,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct xc_mgga_out_params {
    pub zk: *mut f64,
    pub vrho: *mut f64,
    pub vsigma: *mut f64,
    pub vlapl: *mut f64,
    pub vtau: *mut f64,
    pub v2rho2: *mut f64,
    pub v2rhosigma: *mut f64,
    pub v2rholapl: *mut f64,
    pub v2rhotau: *mut f64,
    pub v2sigma2: *mut f64,
    pub v2sigmalapl: *mut f64,
    pub v2sigmatau: *mut f64,
    pub v2lapl2: *mut f64,
    pub v2lapltau: *mut f64,
    pub v2tau2: *mut f64,
    pub v3rho3: *mut f64,
    pub v3rho2sigma: *mut f64,
    pub v3rho2lapl: *mut f64,
    pub v3rho2tau: *mut f64,
    pub v3rhosigma2: *mut f64,
    pub v3rhosigmalapl: *mut f64,
    pub v3rhosigmatau: *mut f64,
    pub v3rholapl2: *mut f64,
    pub v3rholapltau: *mut f64,
    pub v3rhotau2: *mut f64,
    pub v3sigma3: *mut f64,
    pub v3sigma2lapl: *mut f64,
    pub v3sigma2tau: *mut f64,
    pub v3sigmalapl2: *mut f64,
    pub v3sigmalapltau: *mut f64,
    pub v3sigmatau2: *mut f64,
    pub v3lapl3: *mut f64,
    pub v3lapl2tau: *mut f64,
    pub v3lapltau2: *mut f64,
    pub v3tau3: *mut f64,
    pub v4rho4: *mut f64,
    pub v4rho3sigma: *mut f64,
    pub v4rho3lapl: *mut f64,
    pub v4rho3tau: *mut f64,
    pub v4rho2sigma2: *mut f64,
    pub v4rho2sigmalapl: *mut f64,
    pub v4rho2sigmatau: *mut f64,
    pub v4rho2lapl2: *mut f64,
    pub v4rho2lapltau: *mut f64,
    pub v4rho2tau2: *mut f64,
    pub v4rhosigma3: *mut f64,
    pub v4rhosigma2lapl: *mut f64,
    pub v4rhosigma2tau: *mut f64,
    pub v4rhosigmalapl2: *mut f64,
    pub v4rhosigmalapltau: *mut f64,
    pub v4rhosigmatau2: *mut f64,
    pub v4rholapl3: *mut f64,
    pub v4rholapl2tau: *mut f64,
    pub v4rholapltau2: *mut f64,
    pub v4rhotau3: *mut f64,
    pub v4sigma4: *mut f64,
    pub v4sigma3lapl: *mut f64,
    pub v4sigma3tau: *mut f64,
    pub v4sigma2lapl2: *mut f64,
    pub v4sigma2lapltau: *mut f64,
    pub v4sigma2tau2: *mut f64,
    pub v4sigmalapl3: *mut f64,
    pub v4sigmalapl2tau: *mut f64,
    pub v4sigmalapltau2: *mut f64,
    pub v4sigmatau3: *mut f64,
    pub v4lapl4: *mut f64,
    pub v4lapl3tau: *mut f64,
    pub v4lapl2tau2: *mut f64,
    pub v4lapltau3: *mut f64,
    pub v4tau4: *mut f64,
}
pub type xc_lda_funcs = ::core::option::Option<
    unsafe extern "C" fn(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        out: *mut xc_lda_out_params,
    ),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct xc_lda_funcs_variants {
    pub unpol: [xc_lda_funcs; 5usize],
    pub pol: [xc_lda_funcs; 5usize],
}
pub type xc_gga_funcs = ::core::option::Option<
    unsafe extern "C" fn(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        out: *mut xc_gga_out_params,
    ),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct xc_gga_funcs_variants {
    pub unpol: [xc_gga_funcs; 5usize],
    pub pol: [xc_gga_funcs; 5usize],
}
pub type xc_mgga_funcs = ::core::option::Option<
    unsafe extern "C" fn(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        lapl: *const f64,
        tau: *const f64,
        out: *mut xc_mgga_out_params,
    ),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct xc_mgga_funcs_variants {
    pub unpol: [xc_mgga_funcs; 5usize],
    pub pol: [xc_mgga_funcs; 5usize],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct xc_func_info_type {
    pub number: c_int,
    pub kind: c_int,
    pub name: *const c_char,
    pub family: c_int,
    pub refs: [*mut func_reference_type; 5usize],
    pub flags: c_int,
    pub dens_threshold: f64,
    pub ext_params: func_params_type,
    pub init: ::core::option::Option<unsafe extern "C" fn(p: *mut xc_func_type)>,
    pub end: ::core::option::Option<unsafe extern "C" fn(p: *mut xc_func_type)>,
    pub lda: *const xc_lda_funcs_variants,
    pub gga: *const xc_gga_funcs_variants,
    pub mgga: *const xc_mgga_funcs_variants,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct xc_dimensions {
    pub rho: c_int,
    pub sigma: c_int,
    pub lapl: c_int,
    pub tau: c_int,
    pub zk: c_int,
    pub vrho: c_int,
    pub vsigma: c_int,
    pub vlapl: c_int,
    pub vtau: c_int,
    pub v2rho2: c_int,
    pub v2rhosigma: c_int,
    pub v2rholapl: c_int,
    pub v2rhotau: c_int,
    pub v2sigma2: c_int,
    pub v2sigmalapl: c_int,
    pub v2sigmatau: c_int,
    pub v2lapl2: c_int,
    pub v2lapltau: c_int,
    pub v2tau2: c_int,
    pub v3rho3: c_int,
    pub v3rho2sigma: c_int,
    pub v3rho2lapl: c_int,
    pub v3rho2tau: c_int,
    pub v3rhosigma2: c_int,
    pub v3rhosigmalapl: c_int,
    pub v3rhosigmatau: c_int,
    pub v3rholapl2: c_int,
    pub v3rholapltau: c_int,
    pub v3rhotau2: c_int,
    pub v3sigma3: c_int,
    pub v3sigma2lapl: c_int,
    pub v3sigma2tau: c_int,
    pub v3sigmalapl2: c_int,
    pub v3sigmalapltau: c_int,
    pub v3sigmatau2: c_int,
    pub v3lapl3: c_int,
    pub v3lapl2tau: c_int,
    pub v3lapltau2: c_int,
    pub v3tau3: c_int,
    pub v4rho4: c_int,
    pub v4rho3sigma: c_int,
    pub v4rho3lapl: c_int,
    pub v4rho3tau: c_int,
    pub v4rho2sigma2: c_int,
    pub v4rho2sigmalapl: c_int,
    pub v4rho2sigmatau: c_int,
    pub v4rho2lapl2: c_int,
    pub v4rho2lapltau: c_int,
    pub v4rho2tau2: c_int,
    pub v4rhosigma3: c_int,
    pub v4rhosigma2lapl: c_int,
    pub v4rhosigma2tau: c_int,
    pub v4rhosigmalapl2: c_int,
    pub v4rhosigmalapltau: c_int,
    pub v4rhosigmatau2: c_int,
    pub v4rholapl3: c_int,
    pub v4rholapl2tau: c_int,
    pub v4rholapltau2: c_int,
    pub v4rhotau3: c_int,
    pub v4sigma4: c_int,
    pub v4sigma3lapl: c_int,
    pub v4sigma3tau: c_int,
    pub v4sigma2lapl2: c_int,
    pub v4sigma2lapltau: c_int,
    pub v4sigma2tau2: c_int,
    pub v4sigmalapl3: c_int,
    pub v4sigmalapl2tau: c_int,
    pub v4sigmalapltau2: c_int,
    pub v4sigmatau3: c_int,
    pub v4lapl4: c_int,
    pub v4lapl3tau: c_int,
    pub v4lapl2tau2: c_int,
    pub v4lapltau3: c_int,
    pub v4tau4: c_int,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct xc_func_type {
    pub info: *mut xc_func_info_type,
    pub nspin: c_int,
    pub n_func_aux: c_int,
    pub func_aux: *mut *mut xc_func_type,
    pub mix_coef: *mut f64,
    #[doc = "Parameters for range-separated hybrids\ncam_omega: the range separation constant\ncam_alpha: fraction of full Hartree-Fock exchange, used both for\nusual hybrids as well as range-separated ones\ncam_beta:  fraction of short-range only(!) exchange in\nrange-separated hybrids\n\nN.B. Different conventions for alpha and beta can be found in\nliterature. In the convention used in libxc, at short range the\nfraction of exact exchange is cam_alpha+cam_beta, while at long\nrange it is cam_alpha."]
    pub cam_omega: f64,
    #[doc = "Parameters for range-separated hybrids\ncam_omega: the range separation constant\ncam_alpha: fraction of full Hartree-Fock exchange, used both for\nusual hybrids as well as range-separated ones\ncam_beta:  fraction of short-range only(!) exchange in\nrange-separated hybrids\n\nN.B. Different conventions for alpha and beta can be found in\nliterature. In the convention used in libxc, at short range the\nfraction of exact exchange is cam_alpha+cam_beta, while at long\nrange it is cam_alpha."]
    pub cam_alpha: f64,
    #[doc = "Parameters for range-separated hybrids\ncam_omega: the range separation constant\ncam_alpha: fraction of full Hartree-Fock exchange, used both for\nusual hybrids as well as range-separated ones\ncam_beta:  fraction of short-range only(!) exchange in\nrange-separated hybrids\n\nN.B. Different conventions for alpha and beta can be found in\nliterature. In the convention used in libxc, at short range the\nfraction of exact exchange is cam_alpha+cam_beta, while at long\nrange it is cam_alpha."]
    pub cam_beta: f64,
    pub nlc_b: f64,
    pub nlc_C: f64,
    pub dim: xc_dimensions,
    pub ext_params: *mut f64,
    pub params: *mut c_void,
    pub dens_threshold: f64,
    pub zeta_threshold: f64,
    pub sigma_threshold: f64,
    pub tau_threshold: f64,
}
